feat: Ejemplo Tensor

--- a/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
+++ b/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -224,14 +224,14 @@
     "#NP es un alias, para no escribir completamente numpy\n",
     "import numpy as np\n",
     "arreglo = np.array([1, 2, 3, 4, 5])\n",
-    "print(arr)\n",
-    "print(\"Tipo: \",type(arr))\n",
-    "print(\"Elementos del array:\",arr.dtype)"
+    "print(arreglo)\n",
+    "print(\"Tipo: \",type(arreglo))\n",
+    "print(\"Elementos del array:\",arreglo.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -254,7 +254,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "lista = [1,2,3]\n",
     "\n",
     "vector = np.array(lista)\n",
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -309,8 +308,6 @@
     }
    ],
    "source": [
-    "import numpy as np \n",
-    "\n",
     "##Producto punto entre 2 matrices\n",
     "a = np.array([[1,2],[3,4]]) \n",
     "b = np.array([[11,12],[13,14]])\n",
@@ -327,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +341,7 @@
     "matriz1 = np.array([[1,2,3], [4,5,6]])\n",
     "matriz2 = np.array([[4,5,6], [1,2,3]])\n",
     "print(\"Producto cruz entre matrices:\")\n",
-    "print(np.cross(x, y))"
+    "print(np.cross(matriz1,matriz2))"
    ]
   },
   {
@@ -356,9 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -378,21 +375,19 @@
    ],
    "source": [
     "# Añadir fila\n",
-    "\n",
-    "import numpy as np\n",
     "primeraMatriz = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "\n",
     "print(\"Primera Matriz: \")\n",
     "print(primeraMatriz)\n",
     "\n",
-    "nuevaMatriz = np.append(a, [[50, 60, 70]], axis = 0)\n",
+    "nuevaMatriz = np.append(primeraMatriz, [[50, 60, 70]], axis = 0)\n",
     "print(\"\\nSegunda Matriz, añadiendo una fila: \")\n",
     "print(nuevaMatriz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -447,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -491,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -523,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -626,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -682,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -691,18 +686,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Número entero aleatorio entre 0 y 100: 57\n",
+      "Número entero aleatorio entre 0 y 100: 80\n",
       "\n",
       "Matriz Flotantes:\n",
-      " [[0.87190419 0.25563466 0.80781044]\n",
-      " [0.78071883 0.47373065 0.3934226 ]]\n",
+      " [[0.06383864 0.29957374 0.63463339]\n",
+      " [0.43969628 0.93055676 0.85002077]]\n",
       "\n",
       "Matriz Enteros:\n",
-      " [[67 96 89 96 36]\n",
-      " [66 98  2 43 75]\n",
-      " [31 83 86 55 14]\n",
-      " [39 84 49 57 50]\n",
-      " [70 28 39 52 38]]\n"
+      " [[98 25 90 92 27]\n",
+      " [78 86 19 56 94]\n",
+      " [10 99 90 55 57]\n",
+      " [55 55 12 64 53]\n",
+      " [68 89 11 92 51]]\n"
      ]
     }
    ],
@@ -726,8 +721,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -775,13 +772,66 @@
     "\n",
     "#Rellenar con vectores una matriz\n",
     "relleno = np.full((2,2), [3,5])\n",
-    "print(\"\\nMatriz rellenada:\\n\",relleno)"
+    "print(\"\\nMatriz rellenada:\\n\",relleno)\n",
+    "\n",
+    "##Matriz Transpuesta, Singular, Identidad y Hermítica\n",
+    "\n",
+    "## ndarray nos permitirá tener funciones exclusivas de los arreglos multilineales\n",
+    "matrizPrueba = np.ndarray()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Operaciones fundamentales de matrices\n",
+    "\n",
+    "- T = Transpuesta\n",
+    "- H = Hermitiana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix = np.array([[1,2,3],[3,4,5],[4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{x^{4}}{4}$"
+      ],
+      "text/plain": [
+       "x**4/4"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "\n",
+    "sp.pi.evalf(100)\n",
+    "\n",
+    "x = Symbol('x')\n",
+    "integrate(x**3,x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "## 📊 Matplolib: Todos merecemos ver \n",
     "\n",
     "Matplotlib es una biblioteca para la generación de gráficos a partir de datos contenidos en listas o arrays en el lenguaje de programación Python y su extensión matemática NumPy. Por ejemplo, si yo quiero graficar la siguiente función:\n",
@@ -2190,6 +2240,337 @@
     "    while(error>tolerancia):\n",
     "        l = (Px(a)*b - Px(b)*a)/(Px(a)-Px(b))\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introducción a Inteligencia Artificial 🤖\n",
+    "\n",
+    "La investigación en inteligencia artificial comenzó en la década de los 50, continuando el trabajo llevado a cabo por el matemático británico Alan Turing durante la Segunda Guerra Mundial. Sin embargo, no ha sido hasta la última década cuando se han producido los avances más rápidos en cuanto a IA, como consecuencia de la combinación de tres factores cruciales: el cloud computing (computación en la nube), la gran cantidad de datos y los grandes avances en machine learning (aprendizaje automático)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra: TensorFlow - Framework para Redes Neuronales ⭐️"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primer Algoritmo: MNIST\n",
+    "\n",
+    "\n",
+    "<p>\n",
+    "  <img src=\"https://storage.googleapis.com/kaggle-datasets-images/2243/3791/9384af51de8baa77f6320901f53bd26b/dataset-cover.png\" align = \"right\" width=\"600\"/>\n",
+    "</p>\n",
+    "\n",
+    "\n",
+    "MNIST es un dataset muy popular y algunos lo consideran el \"Hola mundo\" para Tensor. Básicamente consta de varias imágenes de ropa para poder clasificar a través de una Red Neuronal Artificial, ya que todas son del mismo tamaño.\n",
+    "\n",
+    "Para ello usaremos una capa densa, una capa de Dropout y una segunda capa densa de Salida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Compilaremos y entrenaremos el modelo para poder sacar los respectivos pesos de la función."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np #Importamos numpy para los arreglos\n",
+    "import datetime\n",
+    "import tensorflow as tf # Importamos TensorFlow\n",
+    "from tensorflow.keras.datasets import fashion_mnist ## Importams un dataset de Keras, el MNIST\n",
+    "\n",
+    "#Cargar el dataset Fashion Mnist y las variables Xtrain, Xtest, Ytrain Ytest guardan los valores de retorno\n",
+    "(X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalización de las imágenes\n",
+    "\n",
+    "Se divide cada imagen en los conjunto de entrenamiento (train) y de pruebas (test) entre el valor máximo de cada uno de los píxeles (255), ya que 0 significa negro y 255 significa un pixel blanco.\n",
+    "\n",
+    "De este modo, cada píxel se hallará en el rango [0, 1], siendo 0 negro y 1 blanco. \n",
+    "\n",
+    "- ¿Para qué hacemos esto? \n",
+    "\n",
+    "Al normalizar las imágenes, nos aseguramos que nuestro modelo de RNA entrenará más rápidamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " X_train = X_train / 255.0\n",
+    "X_test = X_test / 255.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Redimensionar el dataset\n",
+    "\n",
+    "Como vamos a utilizar una red neuronal totalmente conectada, vamos a redimensionar los subconjuntos de entrenamiento y testing a formato de vector en lugar de en formato de matriz. Esto significa, nuestras imágenes tienen 28x28 pixeles, podemos representar cada uno de sus pixeles como un color entre 0 y 1 ya que normalizamos las imágenes. Ahora en lugar de ponerlo como matriz pondremos un arreglo lineal de 1x(28x28) = 1x784. Esto para tener la primera capa 784 neuronas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 784)\n",
+      "(10000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Como cada imagen tiene 28x28 píxeles, usamos la función reshape en todo el dataset de entrenamiento para convertirlo \n",
+    "# en vectores de tamaño [-1 (todos los elementos), anchura * altura]\n",
+    "X_train = X_train.reshape(-1, 28*28)\n",
+    "print(X_train.shape)\n",
+    "X_test = X_test.reshape(-1, 28*28)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Que empiece la construcción del RNA 🍀\n",
+    "\n",
+    "## - Definir el modelo\n",
+    "Simplemente se define un objeto de modelo Sequential."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - Añadir la primera capa totalmente conectada (capa Densa)\n",
+    "\n",
+    "Hyper-parametros de la capa:\n",
+    "\n",
+    "- Número de unidades/neuronas: **128**\n",
+    "\n",
+    "- Función de activación: **ReLU**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(tf.keras.layers.Dense(units=128, activation='relu', input_shape=(784, )))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - Añadir una capa de Dropout\n",
+    "\n",
+    "Dropout es una técnica de Regularization donde aleatoriamente se asignan a ciertas neuronas de la red el valor cero. De este modo, mientras se entrena, estas neuronas no actualizarán sus valores. Al tener cierto porcentaje de neuronas sin actualizar, el proceso de entrenamiento toma más tiempo pero por contra tenemos menos posibilidades de sufrir sobreentrenamiento (overfitting)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(tf.keras.layers.Dropout(0.2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## - Añadir capa de salida\n",
+    "\n",
+    "En el caso de MNIST tenemos 10 posibles prendas de ropa, por lo que añadiremos una capa con 10 neuronas únicamente al final, en este caso como es una capa de salida y queremos probabilidades por lo mismo, utilizaremos una función de activación SoftMax\n",
+    "\n",
+    "- Número de unidades/neuronas: **10** en el caso del Fashion MNIST\n",
+    "\n",
+    "- Función de activación: **softmax** (probabilidades de cada clase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(tf.keras.layers.Dense(units=10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compilar el modelo\n",
+    "\n",
+    "Ahora compilaremos todo nuestro modelo, para ello es necesario una función de \n",
+    "\n",
+    "- Función optimización: Adam\n",
+    "\n",
+    "- Función de costo o pérdida: Sparse softmax (categorical) crossentropy\n",
+    "\n",
+    "- Métrica: sparse_categorical_accuracy comprueba si el valor verdadero máximo es igual al índice del valor predicho máximo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense (Dense)                (None, 128)               100480    \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                1290      \n",
+      "=================================================================\n",
+      "Total params: 101,770\n",
+      "Trainable params: 101,770\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['sparse_categorical_accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entrenar el modelo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 3s 54us/sample - loss: 0.5340 - sparse_categorical_accuracy: 0.8118\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 3s 45us/sample - loss: 0.4017 - sparse_categorical_accuracy: 0.8539\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 3s 46us/sample - loss: 0.3669 - sparse_categorical_accuracy: 0.8661\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 3s 45us/sample - loss: 0.3485 - sparse_categorical_accuracy: 0.8739\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 3s 45us/sample - loss: 0.3327 - sparse_categorical_accuracy: 0.8788\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x143fef898>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluación del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 0s 29us/sample - loss: 0.3650 - sparse_categorical_accuracy: 0.8689\n",
+      "Precisión del modelo:  0.8689\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_accuracy = model.evaluate(X_test, y_test)\n",
+    "print(\"Precisión del modelo: \",test_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si deseamos, podemos guardar los pesos del modelo en un JSON o en un archivo de nuestra preferencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model_json = model.to_json()\n",
+    "#with open(\"fashion_model.json\", \"w\") as json_file:\n",
+    "#    json_file.write(model_json)\n",
+    "##GUARDAR LOS PESOS\n",
+    "#model.save_weights(\"fashion_model.h5\")"
    ]
   },
   {
