fix: arreglos menores

--- a/Teoría/Básico/El lenguaje de programación Python - Básico.ipynb
+++ b/Teoría/Básico/El lenguaje de programación Python - Básico.ipynb
@@ -15,24 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola a mundo!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hola a mundo!\")  #Es costumbre entre los programadores\n",
-    "#(Postdata, esto es un comentario), con # se escriben"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,7 +191,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplos de uso de Python"
+    "## Ejemplos de uso de Python 🐝"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola a mundo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola a mundo!\")  #Es costumbre entre los programadores\n",
+    "#(Postdata, esto es un comentario), con # se escriben"
    ]
   },
   {
@@ -436,21 +436,21 @@
    "source": [
     "\n",
     "\n",
-    "# <center> 🖥   ¿Qué esperamos?   🖍 </center>"
+    "# <center>  🌳   ¡Empecemos!  🌳  </center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tipos de \"datos\" - (objetos)"
+    "## Tipos de \"datos\" - (objetos) 🌱"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En Python, todas las **variables son objetos**. Todas las cosas que \"declaremos\", que reside en algún lugar de la memoria, posee un identificador único que lo diferencia del resto. Piensa en él como si fuera su INE. Para conocer ese identificador, Python dispone de la función id()."
+    "En Python, todas las **variables son objetos**. Todas las cosas que \"declaremos\", que reside en algún lugar de la memoria, posee un identificador único que lo diferencia del resto. Piensa en él como si fuera su INE. Para conocer ese identificador, Python dispone de la función `id()`."
    ]
   },
   {
@@ -483,37 +483,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los tipos de datos primitivos no existen como tal en Python, sin embargo podemos saber el tipo de dato que contiene una variable con el método type(dato)"
+    "Los tipos de datos primitivos no los podemos declarar como tal en Python, sin embargo podemos saber el tipo de dato que contiene una variable con el método type(dato)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "5\n",
+      "Mi variable es de tipo: <class 'int'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Los enteros\n",
-    "opcion = 5 \n",
+    "opcion = 5\n",
     "print(opcion)\n",
-    "type(opcion)"
+    "print(\"Mi variable es de tipo:\",type(opcion))"
    ]
   },
   {
@@ -525,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -547,8 +538,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los flotantes son números que podemos expresar con número decimal. Python por defecto toma a estos como flotantes y no como tipo double, recordando que doble puede almacenar una mayor cantidad de bits para poder expresar mejor un número con punto flotante."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +561,7 @@
    ],
    "source": [
     "#Floats\n",
-    "# ESto es un comentario\n",
+    "# Para insertar un comentario basta escribir depués de un gato #\n",
     "\n",
     "\n",
     "enunciado = \"Un automóvil se movió 1135.67 metros en 140.86 segundos. Calcule su velocidad\"\n",
@@ -571,7 +569,7 @@
     "distancia = 1135.67\n",
     "tiempo = 140.86 \n",
     "\n",
-    "velocidad = distancia/(tiempo**2)\n",
+    "velocidad = distancia/(tiempo**2) ## ¿Qué será esto? distancia/tiempo al cuadrado.\n",
     "\n",
     "print(enunciado)\n",
     "print(\"\\n \\t La velocidad del automóvil fue:\",velocidad,\"m/s\")"
@@ -581,28 +579,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operadores y comparadores matemáticos"
+    "### Operadores y comparadores matemáticos 🐓"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dentro de la programación existe mucha lógica. Varios elementos de comparación en matemáticas como lo es <, >, ≤, ≥, ≠(!=), o algún método dentro de los objetos tienen la función de devolver un elemento **BOOLEANO** (BOOLEANO: TRUE OR FALSE). Nos devuelve este booleano para determinar si es cierto o falso el enunciado.\n",
+    "Dentro de la programación existe mucha lógica. Varios elementos de comparación en matemáticas como lo es < (menor que), > (mayor que), ≤ (menor o igual que), ≥(mayor o igual que), ≠(!=) (distinto de), tienen la función de decirnos si es verdadera o falsa la afirmación. En términos computacionales buscamos un elemento **BOOLEANO** (BOOLEANO: TRUE OR FALSE).\n",
     "\n",
-    "Además de los clásicos operadores matemáticos descritos por los siguientes símbolos:\n",
-    "\n",
-    "- \\+ : Suma\n",
-    "- \\- : Resta\n",
-    "- \\* : Producto\n",
-    "- / : División\n",
-    "- // : División entera \n",
-    "- % : Módulo o residuo \n"
+    "Este booleano no sirve para determinar si es cierto o falso el enunciado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -611,14 +602,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La suma a+b es: 6 + 5 =  11\n",
-      "La resta a-b es: 6 - 5 =  1\n",
-      "El producto a*b es: 6 * 5 =  30\n",
-      "El cociente a/b es: 6/5 =  1.2\n",
-      "El cociente entero a/b es: 6//5 =  1\n",
-      "El módulo o residuo a%b es: 6%5 =  1\n",
-      "\n",
-      "\n",
       "¿a es igual a b? False\n",
       "¿b es igual a c? True\n",
       "¿a es menor que 5? False\n",
@@ -629,22 +612,9 @@
     }
    ],
    "source": [
-    "a = 6\n",
-    "b = 5\n",
-    "c = 5\n",
-    "print(\"La suma a+b es: \"+str(a)+\" + \"+str(b)+\" = \",a+b)\n",
-    "print(\"La resta a-b es: \"+str(a)+\" - \"+str(b)+\" = \",a-b)\n",
-    "print(\"El producto a*b es: \"+str(a)+\" * \"+str(b)+\" = \",a*b)\n",
-    "print(\"El cociente a/b es: \"+str(a)+\"/\"+str(b)+\" = \",a/b)\n",
-    "print(\"El cociente entero a/b es: \"+str(a)+\"//\"+str(b)+\" = \",a//b)\n",
-    "print(\"El módulo o residuo a%b es: \"+str(a)+\"%\"+str(b)+\" = \",a%b)\n",
-    "\n",
-    "\n",
     "## OJO:\n",
     "## =  1 signo significa asignación, \n",
     "## == doble significa preguntar si son iguales a python\n",
-    "\n",
-    "print(\"\\n\")\n",
     "print(\"¿a es igual a b?\",a == b) \n",
     "print(\"¿b es igual a c?\",b == c)\n",
     "print(\"¿a es menor que 5?\",a<5)\n",
@@ -664,12 +634,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Además de los clásicos operadores de comparación descritos, tenemos a los clásicos matemáticos con los siguientes símbolos:\n",
+    "\n",
+    "- \\+ : Suma\n",
+    "- \\- : Resta\n",
+    "- \\* : Producto\n",
+    "- / : División\n",
+    "- // : División entera \n",
+    "- % : Módulo o residuo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma a+b es: 6 + 5 =  11\n",
+      "La resta a-b es: 6 - 5 =  1\n",
+      "El producto a*b es: 6 * 5 =  30\n",
+      "El cociente a/b es: 6/5 =  1.2\n",
+      "El cociente entero a/b es: 6//5 =  1\n",
+      "El módulo o residuo a%b es: 6%5 =  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 6\n",
+    "b = 5\n",
+    "c = 5\n",
+    "print(\"La suma a+b es: \"+str(a)+\" + \"+str(b)+\" = \",a+b)\n",
+    "print(\"La resta a-b es: \"+str(a)+\" - \"+str(b)+\" = \",a-b)\n",
+    "print(\"El producto a*b es: \"+str(a)+\" * \"+str(b)+\" = \",a*b)\n",
+    "print(\"El cociente a/b es: \"+str(a)+\"/\"+str(b)+\" = \",a/b)\n",
+    "print(\"El cociente entero a/b es: \"+str(a)+\"//\"+str(b)+\" = \",a//b)\n",
+    "print(\"El módulo o residuo a%b es: \"+str(a)+\"%\"+str(b)+\" = \",a%b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### ¿Qué sucede aquí?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +692,7 @@
        "False"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
