--- a/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
+++ b/Teoría/Intermedio/El lenguaje de programación Python - Intermedio.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# El lenguaje de programación Python🐍 - Intermedio"
+    "# El lenguaje de programación Python - Intermedio 🐬"
    ]
   },
   {
@@ -33,54 +33,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ¿Qué es Python?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python es un lenguaje de programación interpretado cuya filosofía hace hincapié en la legibilidad de su código.\n",
-    "\n",
-    "Se trata de un lenguaje de programación multiparadigma, ya que soporta orientación a objetos, programación imperativa y, en menor medida, programación funcional. Es un lenguaje interpretado, dinámico y multiplataforma."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Es administrado por la Python Software Foundation. Posee una licencia de código abierto, denominada Python Software Foundation License, que es compatible con la Licencia pública general de GNU a partir de la versión 2.1.1, e incompatible en ciertas versiones anteriores.\n",
-    "\n",
-    "![](img/python.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Las ventajas de Python pueden ser muchas, pero destacan:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- La cantidad de bibliotecas que contiene, tipos de datos y funciones incorporadas en el propio lenguaje, que ayudan a realizar muchas tareas habituales sin necesidad de tener que programarlas desde cero.\n",
-    "\n",
-    "- La sencillez y velocidad con la que se crean los programas. Un programa en Python puede tener de 3 a 5 líneas de código menos que su equivalente en Java o C.\n",
-    "\n",
-    "- La cantidad de plataformas en las que podemos desarrollar, como Unix, Windows, OS/2, Mac, Amiga y otros.\n",
-    "\n",
-    "- Además, Python es gratuito, incluso para propósitos empresariales."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Contextos\n",
-    "\n"
+    "\n",
+    "Los administradores de contexto te permiten asignar y liberar recursos precisamente cuando lo desee. El ejemplo más utilizado de administradores de contexto es la declaración `with`. \n",
+    "\n",
+    "Suponga que tiene dos operaciones relacionadas que le gustaría ejecutar como un par, con un bloque de código en el medio. Los administradores de contexto le permiten hacer eso específicamente. Por ejemplo:\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
