--- a/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
+++ b/Teoría/Avanzado/El lenguaje de programación Python - Avanzado.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# El lenguaje de programación Python🐍 - Avanzado"
+    "# El lenguaje de programación Python - Avanzado 🐳"
    ]
   },
   {
