--- a/Proyectos/Problemas de Proyect Euler 1/Proyect Euler Eq 1.ipynb
+++ b/Proyectos/Problemas de Proyect Euler 1/Proyect Euler Eq 1.ipynb
@@ -8,11 +8,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Problema 1. ##\n",
+    "\n",
+    "```\n",
+    "If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. The sum of these multiples is 23.\n",
+    "\n",
+    "Find the sum of all the multiples of 3 or 5 below 1000.\n",
+    "```\n",
+    "\n",
+    "**Solución:**\n",
+    "```\n",
+    "Nos pide el problema cuál es la suma de todos los multiplos de 3 o 5 debajo de 100. Entonces es el siguiente código:\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma de los multiplos de 3 o 5 hasta el 100 es: 233168\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=1000 #Es el n que se quiere calcular, mejor dicho el natural.\n",
+    "lista=[]\n",
+    "#Se hace el ciclo para un rango de (1,1000) \n",
+    "#Dentro del ciclo pregunta si es multiplo de 3 o 5\n",
+    "#Si es así lo agrega a la lista y aumenta el valor de x.\n",
+    "for x in range(1,n): \n",
+    "\tif x%3==0 or x%5==0:\n",
+    "\t\tlista.append(x)\n",
+    "\t\tx+=1\n",
+    "print(\"La suma de los multiplos de 3 o 5 hasta el 100 es:\",sum(lista)) #Finalmente imprime la suma\n"
+   ]
   },
   {
    "cell_type": "markdown",
