Se me olvido darle Ctrl-S xd

--- a/Proyectos/Problemas de Proyect Euler 1/problema 12.ipynb
+++ b/Proyectos/Problemas de Proyect Euler 1/problema 12.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "What is the value of the first triangle number to have over five hundred divisors?\n",
     "\n",
+    "Omar Armando Olazábal Baquero\n",
     "En este problema nos piden hallar el numero triangular con mas de 500 divisores"
    ],
    "cell_type": "markdown",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
