--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "frozen-there",
    "metadata": {},
    "source": [
     "<br><br><p style=\"text-align: center;\">\n",
@@ -22,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charitable-forestry",
    "metadata": {},
    "source": [
     "# Problema 1\n",
@@ -35,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "applicable-picture",
    "metadata": {},
    "outputs": [
     {
@@ -56,12 +53,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problema 3\n",
+    "Los factores primos de 13195 son 5, 7, 13 y 29.\n",
+    "\n",
+    "¿Cuál es el factor primo más grande del número 600851475143?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "overall-october",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Definimos la constante\n",
+    "numero=600851475143\n",
+    "#Para buscar el divisor y por definición de número primo, iniciamos en 2\n",
+    "i=2 \n",
+    "#Iteramos para encontrar el divisor primo\n",
+    "#Verificamos que el factor que estamos buscando sea menor al número en cuestión\n",
+    "while i<=numero: \n",
+    "    #este contador sirve para enumerar cuántos valores anteceden a \"i\" \n",
+    "    #por lo tanto para cada valor de \"i\" se reinicia la cuenta\n",
+    "    contador=0\n",
+    "    #Para saber cuántos antecesores tiene el supuesto número primo (\"i\")..\n",
+    "    for j in range(2,i):\n",
+    "        #Contamos cuando el módulo entre \"i\" y el antecesor es diferente de cero\n",
+    "        if i%j!=0:\n",
+    "            contador=contador+1\n",
+    "    #En la siguiente condición validamos que \"i\" es un número primo\n",
+    "    #Primero verificamos que ninguno de los números que le anteceden lo puedan dividir\n",
+    "    #Después calculamos el módulo del \"número\" entre \"i\" para corroborar que es factor \n",
+    "    if contador==i-2 and numero%i==0 :\n",
+    "        #Sabiendo que \"i\" es primo y a la vez factor de \"número\"\n",
+    "        #consideramos momentaneamente a \"i\" como el factor primo más grande\n",
+    "        primoMayor=i\n",
+    "        #Validamos al primo más grande dividiendo al número original varias veces\n",
+    "        #para esto necesitamos una bandera que detenga dicha división\n",
+    "        bandera=0\n",
+    "        while bandera==0:\n",
+    "            numero=numero/primoMayor\n",
+    "            #Debido a que \"i\" va en aumento y la división disminuye\n",
+    "            #cuando éstos dos valores se encuentran\n",
+    "            #quiere decir que encontramos al factor primo más grande\n",
+    "            if numero%primoMayor!=0:\n",
+    "                bandera=1\n",
+    "    #buscamos el siguiente número primo           \n",
+    "    i=i+1\n",
+    "print(primoMayor)"
+   ]
   }
  ],
  "metadata": {
