--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "tamil-flavor",
    "metadata": {},
    "source": [
     "<br><br><p style=\"text-align: center;\">\n",
@@ -21,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "temporal-bench",
    "metadata": {},
    "source": [
     "# Problema 1\n",
@@ -33,6 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "complete-domain",
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +57,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "available-agent",
    "metadata": {},
    "source": [
     "# Problema 3\n",
@@ -64,9 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "operational-shame",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6857\n"
+     ]
+    }
+   ],
    "source": [
     "#Definimos la constante\n",
     "numero=600851475143\n",
@@ -104,6 +117,71 @@
     "    i=i+1\n",
     "print(primoMayor)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hungry-fellowship",
+   "metadata": {},
+   "source": [
+    "# Problema 10\n",
+    "\n",
+    "\n",
+    "La suma de los números primos por debajo de 10 es 2 + 3 + 5 + 7 = 17.\n",
+    "\n",
+    "Encuentra la suma de todos los números primos por debajo de dos millones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "consecutive-corpus",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suma de los números primos inferiores a 2000000:  142913828922\n",
+      "Tiempo de cálculo (hh:mm:ss.ms) 1:14:12.063506\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime \n",
+    "start_time = datetime.now() \n",
+    "lim=2000001\n",
+    "numeros=[]\n",
+    "for x in range(3,lim,2):\n",
+    "    if x%3!=0 :\n",
+    "        numeros.append(x)\n",
+    "        if  x%5==0 or x%7==0 or x%11==0 or x%13==0 or x%17==0 or x%19==0:\n",
+    "            numeros.remove(x)\n",
+    "\n",
+    "suma=77\n",
+    "while numeros[0]<= lim ** (0.5):\n",
+    "    suma+=numeros[0]\n",
+    "    multiplos=[]\n",
+    "    k=numeros[0]\n",
+    "    multiplo=numeros[0]\n",
+    "    aux=numeros[0]\n",
+    "    while multiplo<lim:\n",
+    "        if multiplo in numeros:\n",
+    "            numeros.remove(multiplo)\n",
+    "        multiplo=aux*k\n",
+    "        k=k+1\n",
+    "for x in range (len(numeros)):\n",
+    "    suma+=numeros[x]\n",
+    "print(\"Suma de los números primos inferiores a 2000000: \",suma)\n",
+    "print('Tiempo de cálculo (hh:mm:ss.ms) {}'.format(datetime.now() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "private-grace",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
