--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -56,6 +56,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecological-russia",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "available-agent",
    "metadata": {},
@@ -116,6 +124,49 @@
     "    #buscamos el siguiente número primo           \n",
     "    i=i+1\n",
     "print(primoMayor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "comprehensive-focus",
+   "metadata": {},
+   "source": [
+    "# Problema 4\n",
+    "\n",
+    "A palindromic number reads the same both ways. The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99.\n",
+    "\n",
+    "Find the largest palindrome made from the product of two 3-digit numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "graduate-stereo",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "906609\n"
+     ]
+    }
+   ],
+   "source": [
+    "bandera=0 #esta variable es para que no muestre mas palindromos mas que el mas grande\n",
+    "#usamos dos for para obtener la multiplicacion ya que con solo la operacion de multiplicacion no podemos obtener\n",
+    "#todos los numeros del 0 al 999*999\n",
+    "for i in range(999,900,-1):\n",
+    "    for j in range(999,900,-1):\n",
+    "        #transformamos el numero en string para poder invertirlo sin problema\n",
+    "        numero=str(i*j)\n",
+    "        numero_rev=numero[::-1]#invertimos el numero para comprobar que sea palindromo\n",
+    "        if(numero==numero_rev):#comparamos que sea palindromo\n",
+    "            print(numero)\n",
+    "            bandera=1\n",
+    "            break\n",
+    "    if bandera ==1:        \n",
+    "        break"
    ]
   },
   {
@@ -200,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
