--- a/Proyectos/Problemas de Proyect Euler 1/Ejercicio_8/Ejercicio 8.ipynb
+++ b/Proyectos/Problemas de Proyect Euler 1/Ejercicio_8/Ejercicio 8.ipynb
@@ -37,14 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Producto:  5576689664895\n"
+      "Los numeros que generan el mayor producto:  5576689664895\n",
+      "Producto =  23514624000\n"
      ]
     }
    ],
@@ -87,7 +88,7 @@
     "        mayorProducto(posicion,Mayor_producto, posicionMayor)        #Se llama nuevamente la funcion\n",
     "    else:                                #Si ya no es posible generar una nueva cadena entra en esta condicion\n",
     "        print('Los numeros que generan el mayor producto: ',lista[posicionMayor:posicionMayor+longitud]) #Se imprime  la cadena de números\n",
-    "        \n",
+    "        print('Producto = ',Mayor_producto)\n",
     "posicion_actual=0\n",
     "posicionMayor=0\n",
     "Mayor_producto=-1\n",
