--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "tamil-flavor",
    "metadata": {},
    "source": [
     "<br><br><p style=\"text-align: center;\">\n",
@@ -16,13 +15,13 @@
     "* Huarte Nolasco Mario\n",
     "* Merino Hernández Ailyn\n",
     "* Minero Pineda Erick Rodrigo\n",
+    "* Lira Navarro Juan Arturo\n",
     "    \n",
     "</font>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "temporal-bench",
    "metadata": {},
    "source": [
     "# Problema 1\n",
@@ -35,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "complete-domain",
    "metadata": {},
    "outputs": [
     {
@@ -56,16 +54,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problema 2\n",
+    "Cada nuevo término de la secuencia de Fibonacci se genera sumando los dos términos anteriores. Al comenzar con 1 y 2, los primeros 10 términos son:\n",
+    "\n",
+    "1, 2, 3, 5, 8, 13, 21, 34, 55, 89, ...\n",
+    "\n",
+    "Considerando los términos en la secuencia de Fibonacci cuyos valores no excedan los cuatro millones, encuentre la suma de los términos pares."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecological-russia",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "available-agent",
    "metadata": {},
    "source": [
     "# Problema 3\n",
@@ -77,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "operational-shame",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +135,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comprehensive-focus",
    "metadata": {},
    "source": [
     "# Problema 4\n",
@@ -140,8 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "graduate-stereo",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +176,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greenhouse-action",
+   "metadata": {},
+   "source": [
+    "# Problema 6\n",
+    "\n",
+    "La suma de los cuadrados de los primeros diez números naturales es:\n",
+    "\n",
+    "<p style=\"text-align: center;\">$1^2 + 2^2 + ... + 10^2 = 385$</p>\n",
+    "\n",
+    "El cuadrado de la suma de los primeros diez números naturales es:\n",
+    "\n",
+    "<p style=\"text-align: center;\">$(1 + 2 + ... + 10)^2 = 55^2 = 3025$</p>\n",
+    "\n",
+    "\n",
+    "Por tanto, la diferencia entre la suma de los cuadrados de los primeros diez números naturales y el cuadrado de la suma es:\n",
+    "$3025 - 385 = 2640$.\n",
+    "\n",
+    "\n",
+    "Calcula la diferencia entre la suma de los cuadrados de los primeros cien números naturales y el cuadrado de la suma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25164150\n"
+     ]
+    }
+   ],
+   "source": [
+    "sumaCuadrados=0\n",
+    "suma=0\n",
+    "for i in range(101):\n",
+    "    sumaCuadrados=sumaCuadrados+i**2\n",
+    "    suma=suma+i\n",
+    "diferencia=suma**2-sumaCuadrados\n",
+    "print(diferencia)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Problema 10\n",
@@ -185,7 +234,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "female-orbit",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +277,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "active-stocks",
    "metadata": {},
    "outputs": [],
    "source": []
