--- a/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
+++ b/EntregasEuler/SoyuzzDeTepito_7/Proyecto.ipynb
@@ -71,11 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "different-hypothesis",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4613732\n"
+     ]
+    }
+   ],
+   "source": [
+    "actual=2\n",
+    "anterior=1\n",
+    "sumaPares=0\n",
+    "while actual<=4000000:\n",
+    "    if actual%2==0:\n",
+    "        sumaPares+=actual\n",
+    "    actual+=anterior\n",
+    "    anterior=actual-anterior\n",
+    "print(sumaPares)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -479,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.7.1-final"
   }
  },
  "nbformat": 4,
